--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,6 @@ end_of_line = lf
 [*.cs]
 indent_style = space
 indent_size = 4
-
 # 
 # NOTE: 
 #
@@ -17,20 +16,27 @@ indent_size = 4
 # https://github.com/dotnet/roslyn/blob/master/.editorconfig 
 #
 
+# IDE0055: Fix formatting
+dotnet_diagnostic.IDE0055.severity = error
+
+# Sort using and Import directives with System.* appearing first
+dotnet_sort_system_directives_first = true
+dotnet_separate_import_directives_groups = false
+
 # Avoid "this." for methods, fields, events and properties
-dotnet_style_qualification_for_field = false:error
-dotnet_style_qualification_for_method = false:error
-dotnet_style_qualification_for_property = false:error
-dotnet_style_qualification_for_event = false:error
+dotnet_style_qualification_for_field = false
+dotnet_style_qualification_for_method = false
+dotnet_style_qualification_for_property = false
+dotnet_style_qualification_for_event = false
 
 # Use language keywords instead of framework type names for type references (such as int not Int32)
-dotnet_style_predefined_type_for_locals_parameters_members = true:error
-dotnet_style_predefined_type_for_member_access = true:error
+dotnet_style_predefined_type_for_locals_parameters_members = true
+dotnet_style_predefined_type_for_member_access = true
 
 # Prefer "var" everywhere
-csharp_style_var_for_built_in_types = true:error
-csharp_style_var_when_type_is_apparent = true:error
-csharp_style_var_elsewhere = true:error
+csharp_style_var_for_built_in_types = true
+csharp_style_var_when_type_is_apparent = true
+csharp_style_var_elsewhere = true
 
 # Prefer method-like constructs to have a block body (using {})
 # csharp_style_expression_bodied_methods = false:error
@@ -92,24 +98,53 @@ dotnet_style_null_propagation = true:error
 #         from the m-prefix style place it before the prefix rule
 #
 
-# Any static field and Properties should be just PascalCase
-dotnet_naming_rule.static_fields_pascal.severity = error
-dotnet_naming_rule.static_fields_pascal.symbols  = static_fields_pascal_symbols
-dotnet_naming_rule.static_fields_pascal.style    = static_fields_pascal_style
+# Constants are All_Upper
+dotnet_naming_rule.constants_must_be_all_upper.severity = error
+dotnet_naming_rule.constants_must_be_all_upper.symbols = constants
+dotnet_naming_rule.constants_must_be_all_upper.style = constants_style
 
-dotnet_naming_style.static_fields_pascal_style.capitalization         = pascal_case
-dotnet_naming_symbols.static_fields_pascal_symbols.applicable_kinds   = field
-dotnet_naming_symbols.static_fields_pascal_symbols.required_modifiers = static
+dotnet_naming_symbols.constants.applicable_kinds = field, local
+dotnet_naming_symbols.constants.required_modifiers = const
 
-# Member fields must start with 'm' then PascalCase
-dotnet_naming_rule.members_start_with_m.severity = error
-dotnet_naming_rule.members_start_with_m.symbols  = members_start_with_m_symbols
-dotnet_naming_rule.members_start_with_m.style    = members_start_with_m_style
+dotnet_naming_style.constants_style.capitalization = all_upper
 
-dotnet_naming_style.members_start_with_m_style.capitalization         = camel_case
-dotnet_naming_style.members_start_with_m_style.required_prefix        = _
-dotnet_naming_symbols.members_start_with_m_symbols.applicable_kinds   = field
-dotnet_naming_symbols.members_start_with_m_symbols.required_modifiers = private,internal,private,protected,protected_internal
+# Instance fields are camelCase and start with _
+dotnet_naming_rule.instance_fields_must_be_pascal_case.severity = error
+dotnet_naming_rule.instance_fields_must_be_pascal_case.symbols = instance_fields
+dotnet_naming_rule.instance_fields_must_be_pascal_case.style = instance_field_style
+
+dotnet_naming_symbols.instance_fields.applicable_kinds = field
+dotnet_naming_symbols.Instance_fields.applicable_accessibilities = private
+
+dotnet_naming_style.instance_field_style.capitalization = pascal_case
+dotnet_naming_style.instance_field_style.required_prefix = _
+
+# Locals and parameters are calmelCase
+dotnet_naming_rule.locals_and_parameters_must_be_camel_case.severity = error
+dotnet_naming_rule.locals_and_parameters_must_be_camel_case.symbols = locals_and_parameters
+dotnet_naming_rule.locals_and_parameters_must_be_camel_case.style = locals_and_parameters_style
+
+dotnet_naming_symbols.locals_and_parameters.applicable_kinds = parameter, local
+
+dotnet_naming_style.locals_and_parameters_style.capitalization = camel_case
+
+# Local functions are PascalCase
+dotnet_naming_rule.local_functions_must_be_pascal_case.severity = error
+dotnet_naming_rule.local_functions_must_be_pascal_case.symbols = local_functions
+dotnet_naming_rule.local_functions_must_be_pascal_case.style = local_functions_style
+
+dotnet_naming_symbols.local_functions.applicable_kinds = local_functiuon
+
+dotnet_naming_style.local_functions_style.capitalization = pascal_case
+
+# By default, name items with PascalCase
+dotnet_naming_rule.members_must_be_pascal_case.severity = error
+dotnet_naming_rule.members_must_be_pascal_case.symbols = all_members
+dotnet_naming_rule.members_must_be_pascal_case.style = all_members_style
+
+dotnet_naming_rule.all_members.applicable_kinds = *
+
+dotnet_naming_style.all_members_style.capitalization = pascal_case
 
 # Async methods end with Async
 dotnet_naming_rule.async_methods_must_end_with_async.severity = error
@@ -121,19 +156,3 @@ dotnet_naming_symbols.async_methods_must_end_with_async_symbols.required_modifie
 
 dotnet_naming_style.async_methods_must_end_with_async_style.capitalization  = pascal_case
 dotnet_naming_style.async_methods_must_end_with_async_style.required_suffix = Async
-
-# Properties and Enums are PascalCase
-dotnet_naming_rule.properties_pascal.severity = error
-dotnet_naming_rule.properties_pascal.symbols  = properties_pascal_symbols
-dotnet_naming_rule.properties_pascal.style    = properties_pascal_style
-
-dotnet_naming_style.properties_pascal_style.capitalization         = pascal_case
-dotnet_naming_symbols.properties_pascal_symbols.applicable_kinds   = property,enum
-
-# Classes, Structs, Events, Delegates, Methods and Interfaces are PascalCase
-dotnet_naming_rule.class_pascal.severity = error
-dotnet_naming_rule.class_pascal.symbols  = class_pascal_symbols
-dotnet_naming_rule.class_pascal.style    = class_pascal_style
-
-dotnet_naming_style.class_pascal_style.capitalization         = pascal_case
-dotnet_naming_symbols.class_pascal_symbols.applicable_kinds   = class,interface,struct,method,event,delegate
