- Remove System.Windows.Interactivity reference - Changed main button style to the "OfficeButtonStyle" - Encoder window added.

--- a/ScreenToGif/ScreenToGif/ScreenToGif.csproj
+++ b/ScreenToGif/ScreenToGif/ScreenToGif.csproj
@@ -39,9 +39,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Windows.Interactivity">
-      <HintPath>..\libs\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -64,7 +61,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Behaviours\TextBoxInputBehaviour.cs" />
     <Compile Include="Controls\LightWindow.cs" />
     <Compile Include="Controls\NumbericUpDown.cs" />
     <Compile Include="Partial\Recorder.cs" />
@@ -74,6 +70,9 @@
     </Compile>
     <Compile Include="Windows\Editor.xaml.cs">
       <DependentUpon>Editor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Encoder.xaml.cs">
+      <DependentUpon>Encoder.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\Options.xaml.cs">
       <DependentUpon>Options.xaml</DependentUpon>
@@ -115,6 +114,10 @@
     <Resource Include="Resources\Logo.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Resources\Icons\New.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -128,6 +131,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\Editor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\Encoder.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -240,6 +247,10 @@
     <Resource Include="Resources\Underline16x.png" />
     <Resource Include="Resources\Undo16x.png" />
     <Resource Include="Resources\Yoyo16x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\NewFile16x.png" />
+    <Resource Include="Resources\Open16x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
