--- a/.editorconfig
+++ b/.editorconfig
@@ -44,9 +44,9 @@ csharp_style_var_elsewhere = true
 # csharp_style_expression_bodied_operators = false:error
 
 # Prefer property-like constructs to have an expression-body (properties using => instead of {})
-csharp_style_expression_bodied_properties = true:error
-csharp_style_expression_bodied_indexers = true:error
-csharp_style_expression_bodied_accessors = true:error
+csharp_style_expression_bodied_properties =true:suggestion
+csharp_style_expression_bodied_indexers =true:suggestion
+csharp_style_expression_bodied_accessors =true:suggestion
 
 # Force objects to initialize their members inside {} on construction
 dotnet_style_object_initializer = true:error
@@ -55,12 +55,12 @@ dotnet_style_collection_initializer = true:error
 # Force pattern matching over cast checking
 #               if (o is int i)
 #   instead of: if (o is int) { var i = (int)o; }
-csharp_style_pattern_matching_over_is_with_cast_check = true:error
+csharp_style_pattern_matching_over_is_with_cast_check =true:suggestion
 
 # Force pattern matching over null checking
 #                if (o is string s)
 #    instead of: var s = (string)o; if (s != null) {}
-csharp_style_pattern_matching_over_as_with_null_check = true:error
+csharp_style_pattern_matching_over_as_with_null_check =true:suggestion
 
 # Force using tuple names never the Item1, Item2 etc...
 dotnet_style_explicit_tuple_names = true:error
@@ -68,17 +68,17 @@ dotnet_style_explicit_tuple_names = true:error
 # Force inline variable declaration
 #             SomeCall(out onError e)
 # instead of: int e; SomeCall(out e);
-csharp_style_inlined_variable_declaration = true:error
+csharp_style_inlined_variable_declaration =true:suggestion
 
 # Force use of ?? for throwing on null checks
 #             var b = a ?? throw();
 # instead of: if (a == null) { throw(); } b = a;
-csharp_style_throw_expression = true:error
+csharp_style_throw_expression =true:suggestion
 
 # Force calling delegates with null check
 #             func?.Invoke()
 # instead of: if (func != null) func();
-csharp_style_conditional_delegate_call = true:error
+csharp_style_conditional_delegate_call =true:suggestion
 
 # Force expression coalescing 
 #             var a = x ?? y;
@@ -156,3 +156,9 @@ dotnet_naming_symbols.async_methods_must_end_with_async_symbols.required_modifie
 
 dotnet_naming_style.async_methods_must_end_with_async_style.capitalization  = pascal_case
 dotnet_naming_style.async_methods_must_end_with_async_style.required_suffix = Async
+[*.{cs,vb}]
+dotnet_style_coalesce_expression=true:suggestion
+dotnet_style_null_propagation=true:suggestion
+dotnet_style_collection_initializer=true:suggestion
+dotnet_style_explicit_tuple_names=true:suggestion
+dotnet_style_object_initializer=true:suggestion
