--- a/SimpleTrader/SimpleTrader.Domain/SimpleTrader.Domain.csproj
+++ b/SimpleTrader/SimpleTrader.Domain/SimpleTrader.Domain.csproj
@@ -1,8 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<UseWPF>true</UseWPF>
+	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
+	</ItemGroup>
 
 </Project>
